Tue Jan 18 10:55:47 2005  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_handle): Check for NULL detail
	and NULL widget.

	* gtk/gtkstyle.c (gtk_default_draw_box): Check for NULL detail and
	NULL widget.  (#164477, Michael Natterer)

2005-01-18  Matthias Clasen  <mclasen@redhat.com>

	Avoid X errors when running against servers which
	implement XRender < 0.4.  (#164427, Albert Chin)
	
	* gdk/x11/gdkprivate-x11.h:
	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_have_render_with_trapezoids): 
	New function to check for trapezoid support in XRender.
	(gdk_x11_draw_trapezoids, _gdk_x11_drawable_draw_xtrapezoids): 
	Use it here.
	
	* gdk/x11/gdkdisplay-x11.h (struct _GdkDisplayX11): Add a 
	separate have_render_with_trapezoids field.

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Initialize it.

2005-01-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c: Remove debug output. (#164376, Jens Finke)

Mon Jan 17 16:44:36 2005  Jonathan Blandford  <jrb@redhat.com>

	* docs/Makefile.am (EXTRA_DIST): add tree-column-sizing.png to
	dist.

2005-01-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_add_bookmarks): Save
	and restore the selected row in the bookmark list and the
	save folder combo.  (#164290)

2005-01-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdialog.c (gtk_file_chooser_dialog_new_with_backend):
	Fix argument order in docs.  

2005-01-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_check_keymap_direction): 
	* gtk/gtkentry.c (gtk_entry_create_layout): Prefer LTR over RTL 
	if the keymap is neutral.  (#164125, Phil Blundell)

2005-01-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Allow to
	reset the property to its default value -1. 
	(gtk_tree_view_get_search_column): Return the default value in
	the g_return_val_if_fail() check.  (#163864, Richard Hult)
